# gtk-glider-clone

./: Cargo.toml  README.md  todo.md
resources/: resources.gresource.xml
src/: application.rs  card.rs  details.rs  feed.rs  feed_page.rs  gesture_box.rs  main.rs  network.rs  story_card.rs  story_object.rs  story_page.rs  transform.rs  window.rs
src/ui/: feed_page.blp  story_card.blp  story_page.blp  style.css  window.blp
