[package]
name = "gtk-glider-clone"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
reqwest = { version = "0.12.4", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
url = "=2.5.0"
chrono = "0.4.35"
async-channel = "2.2.0"

[build-dependencies]
glib-build-tools = "0.19.0"
