[package]
name = "gtk-glider-clone"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_16", "blueprint"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
url = "=2.5.4"
chrono = "0.4.39"
async-channel = "2.3.1"

[build-dependencies]
glib-build-tools = "0.20.0"
